# ai-united

./: .gitignore  .gitmodules  README.md  TODOs.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  zellij-avail.kdl  zellij.kdl
bots/rust/: Cargo.toml
bots/rust/src/: lib.rs
cartesi/src/: main.rs
machine/: Cargo.toml  package.json
machine-executor/: Cargo.toml  logs.txt
machine-executor/src/: main.rs
machine/pkg/: machine.d.ts  machine.js  machine_bg.js  machine_bg.wasm  machine_bg.wasm.d.ts  package.json
machine/src/: lib.rs
modules/rust/: Cargo.toml
wasm2hex/: .gitignore  Cargo.toml
wasm2hex/src/: main.rs
web/: index.js  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
web/src/: app.css
web/src/lib/: index.ts
web/src/lib/battle/: Battle.svelte  Scene.svelte  Settings.svelte  index.ts
web/src/lib/files/: DropZone.svelte  files.ts
web/src/routes/: +layout.svelte  +page.svelte
web/static/: bot_rust.wasm
