[package]
name = "machine-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
machine = { path = "../machine" }
clap = { version = "4.5.20", features = ["derive"] }
hex = { version = "0.4.3" }
lz4_flex = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
