[package]
name = "machine-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
machine = { path = "../machine" }
clap = { version = "4.5.20", features = ["derive"] }
hex = { version = "0.4.3" }
lz4_flex = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


#[replace]
#"rapier3d:0.22.0" = { git = "https://github.com/dimforge/rapier.git", branch = "master" }
#"parry3d:0.17.2" = { git = "https://github.com/dimforge/parry.git", branch = "master" }

#[patch.crates-io]
#rapier3d = { git = "https://github.com/dimforge/rapier.git", branch = "master" }
#parry3d = { git = "https://github.com/wighawag/parry.git", branch = "wighawag-patch-1" }