[package]
name = "machine"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasmer = { version = "5.0.0", default-features=false, features=["js-default"]}
wasm-bindgen = { version = "0.2.95" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
wasmer = { version = "5.0.0", features = ["cranelift"] }
wasmer-middlewares = { version = "5.0.0" }
wasmer-compiler-cranelift = { version = "5.0.0" }


# cargo --crate-type : https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#crate-type

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
